# libfinite-docs

./: .gitignore  astro.config.mjs  package-lock.json  package.json
src/content/docs/: index.mdx
src/content/docs/examples/: cube.md
src/content/docs/guides/: example.md  getting-started.mdx  libfinite.mdx  the-spec.md
src/content/docs/reference/FiniteAudio/Functions/: finite_audio_cleanup.mdx  finite_audio_device_init.mdx  finite_audio_get_audio_duration.mdx  finite_audio_get_audio_params.mdx  finite_audio_init_audio.mdx  finite_audio_pause.mdx  finite_audio_play.mdx  finite_audio_stop.mdx  finite_audio_unpause.mdx
src/content/docs/reference/FiniteAudio/Types/: FinitePlaybackDevice.mdx  FinitePlaybackDuration.mdx
src/content/docs/reference/FiniteDraw/Functions/: finite_draw_cached_png.mdx  finite_draw_cleanup.mdx  finite_draw_create_snapshot.mdx  finite_draw_finish.mdx  finite_draw_get_font_extents.mdx  finite_draw_get_text_extents.mdx  finite_draw_hex_to_color_group.mdx  finite_draw_hex_to_color_group_alpha.mdx  finite_draw_load_snapshot.mdx  finite_draw_pattern_linear.mdx  finite_draw_png.mdx  finite_draw_rect.mdx  finite_draw_reset_offset.mdx  finite_draw_rounded_rect.mdx  finite_draw_set_draw_position.mdx  finite_draw_set_font.mdx  finite_draw_set_offset.mdx  finite_draw_set_text.mdx  (+4 more)
src/content/docs/reference/FiniteRender/: FiniteRender.mdx
src/content/docs/reference/FiniteShell/: FiniteJSON.mdx  FiniteLog.mdx  FiniteShell.mdx
src/content/docs/reference/FiniteUser/: FiniteUser.mdx
src/content/docs/starter-files/: meson.build
src/styles/: font.css
(+117 files in other folders)
